--- a/authenticate/templates/authenticate/register.html
+++ b/authenticate/templates/authenticate/register.html
@@ -1,12 +1,15 @@
 {% extends 'authenticate/base.html' %}
 
 {% block content %}
+    <h1 class="text-center">Login</h1>
+    <div class="col-md-6 offset-md-3">
     <form method="POST" action="{% url 'register' %}">
     {% csrf_token %}
         {% if form.errors %}
            <p>Your form has errors...</p>
         {% endif %}
-    {{ form }}
+    {{ form.as_p }}
         <input type="submit" value="Register" class="btn btn-secondary">
     </form>
+    </div>
 {% endblock %}
