--- a/authenticate/templates/authenticate/change_password.html
+++ b/authenticate/templates/authenticate/change_password.html
@@ -1,9 +1,9 @@
 {% extends 'authenticate/base.html' %}
 
 {% block content %}
-    <h1 class="text-center">Register</h1>
-    <div class="col-md-6 offset-md-3">
-    <form method="POST" action="{% url 'register' %}">
+    <h1 class="text-center">Change password</h1>
+
+    <form method="POST" action="{% url 'change_password' %}">
     {% csrf_token %}
         {% if form.errors %}
             <div class="alert alert-warning" role="alert">
@@ -19,8 +19,8 @@
             </div>
         {% endif %}
     {{ form.as_p }}
-        <input type="submit" value="Register" class="btn btn-secondary">
+        <input type="submit" value="Change password" class="btn btn-secondary">
     </form>
-    </div>
+
     <br>
 {% endblock %}
