--- a/authenticate/templates/authenticate/edit_profile.html
+++ b/authenticate/templates/authenticate/edit_profile.html
@@ -1,9 +1,9 @@
 {% extends 'authenticate/base.html' %}
 
 {% block content %}
-    <h1 class="text-center">Register</h1>
-    <div class="col-md-6 offset-md-3">
-    <form method="POST" action="{% url 'register' %}">
+    <h1 class="text-center">Edit profile</h1>
+
+    <form method="POST" action="{% url 'edit' %}">
     {% csrf_token %}
         {% if form.errors %}
             <div class="alert alert-warning" role="alert">
@@ -19,8 +19,9 @@
             </div>
         {% endif %}
     {{ form.as_p }}
-        <input type="submit" value="Register" class="btn btn-secondary">
+        <input type="submit" value="Edit" class="btn btn-secondary">
     </form>
-    </div>
+    <br>
+    <p><small><a href="{% url 'change_password' %}">Click here</a> To change password</small></p>
     <br>
 {% endblock %}
